# news-classification

./: .gitignore  README.md  databutton.json  pyproject.toml
.github/workflows/: deploy.yml
.streamlit/: config.toml
apps/: app.py
data/: structure.csv
functions/: bootstrap_data.py  download_model.py  scrape_reddit.py
lib/: config.py
notebooks/: news.ipynb
