[tool.poetry]
name = "news-classification"
version = "0.1.0"
description = "App classifying posts from reddit to countries and displaying them as a heatmap"
homepage = "https://next.databutton.com/projects/0bd86282-8420-4d18-ad2c-006c66fe7d3d"
authors = ["Øyvind Moldestad <oyvind@databutton.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
praw = "^7.6.0"
transformers = "^4.19.2"
plotly = "^5.8.0"
pycountry = "^22.3.5"
databutton = "^0.18.1"
torch = "^1.11.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.4.2"
openpyxl = "^3.0.9"
black = "^22.3.0"
huggingface-hub = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
